fix: [pd-398] add suggestion and product alignment

--- a/src/component/HeaderMainSection/HeaderMainSection.style.scss
+++ b/src/component/HeaderMainSection/HeaderMainSection.style.scss
@@ -566,6 +566,9 @@ main {
     opacity: 1;
     margin-left: 14px;
     margin-right: 10px;
+    &_isArabic {
+      margin-left: 0px;
+    }
   }
 }
 #overlay-sections {
